first working version

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,221 @@
 @import "tailwindcss";
+@import "./fonts.css";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --background: #ede9e3;
+  --foreground: #21201f;
+  --primary: #21201f;
+  --secondary: #FFFFFF;
+  --accent: #1C6AA6;
+  --yellow: #c9a024;
+  --orange: #E07A55;
+  --creme: #f9f6f2;
+  --slate: #21201f;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #1c1d21;
+    --foreground: #f3f2ef;
+    --primary: #f3f2ef;
+    --secondary: #23222b;
+    --accent: #5da2d7;
+    --yellow: #fbdf8c;
+    --orange: #eb954e;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme inline {
+
+  /* Colors */
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-accent: var(--accent);
+  --color-yellow: var(--yellow);
+  --color-orange: var(--orange);
+  --color-creme: var(--creme);
+  --color-slate: var(--slate);
+  --color-navy: var(--navy);
+  /* Fonts */
+  --font-calling-code: calling-code;
+  --font-neue-montreal: neue-montreal;
+  --font-cardo: cardo;
+  --font-jetbrains-mono: jetbrains-mono;
+  --font-lato: lato;
+}
+
+@layer base {
+  .container-custom {
+    width: 100%;
+    max-width: 80rem;
+    /* max-w-7xl */
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    /* px-4 */
+    padding-right: 1rem;
+    /* px-4 */
+  }
+
+  .debug {
+    border: 1px solid red;
+  }
+
+  .section-top-margin {
+    margin-top: 5rem;;
+  }
+
+  .section-overlay {
+    width: 100%;
+    height: 80%;
+  }
+
+  .parallax-section {
+    position: relative;
+    z-index: 1;
+  }
+
+  .parallax-background {
+    will-change: transform;
+  }
+
+  body {
+    background: var(--background);
+    color: var(--foreground);
+  }
+
+  .heading-xl {
+    /* font-family: var(--font-neue-montreal), sans-serif; */
+    font-weight: bold; 
+    font-size: 3.75rem; 
+    line-height: 0.85;
+    color: var(--primary); 
+    color: inherit;
+  }
+  
+  @media (min-width: 768px) {
+    .heading-xl {
+      font-size: 4rem; 
+      line-height: 0.85;
+    }
+  }
+  
+  @media (min-width: 1024px) {
+    .heading-xl {
+      font-size: 4.75rem; 
+      line-height: 0.85;
+    }
+  }
+  
+  .heading-lg {
+    /* font-family: var(--font-neue-montreal), sans-serif; */
+    font-weight: bold; 
+    font-size: 2.75rem; 
+    line-height: 3rem;
+    letter-spacing: -0.025em; 
+    color: inherit;
+  }
+  
+  @media (min-width: 768px) {
+    .heading-lg {
+      font-size: 3.25rem; 
+      line-height: 1;
+    }
+  }
+  
+  .heading-md {
+    /* font-family: var(--font-neue-montreal), sans-serif; */
+    font-weight: bold; 
+    font-size: 2.25rem; 
+    line-height: 2rem;
+    color: var(--primary);
+    color: inherit;
+  }
+  
+  @media (min-width: 768px) {
+    .heading-md {
+      font-size: 2.5rem; 
+      line-height: 2.25rem;
+    }
+  }
+  
+  .heading-sm {
+    /* font-family: var(--font-neue-montreal), sans-serif; */
+    font-weight: bold; 
+    font-size: 1.5rem; 
+    line-height: 1.75rem;
+    color: var(--primary);
+    color: inherit;
+  }
+  
+  @media (min-width: 768px) {
+    .heading-sm {
+      font-size: 1.75rem; 
+      line-height: 2rem;
+    }
+  }
+  
+  .paragraph {
+    /* font-family: var(--font-neue-montreal), sans-serif; */
+    font-size: 2rem; 
+    line-height: 1.5;
+  }
+  
+  @media (min-width: 768px) {
+    .paragraph {
+      font-size: 2rem; 
+      line-height: 1.75rem;
+    }
+  }
+  
+  .paragraph-serif {
+    font-family: var(--font-cardo), serif;
+    font-size: 1rem; 
+    line-height: 1.5;
+  }
+  
+  @media (min-width: 768px) {
+    .paragraph-serif {
+      font-size: 1.125rem; 
+      line-height: 1.75rem;
+    }
+  }
+}
+
+@layer components {
+
+  .button-primary {
+    border-radius: 6px;
+    border: 0.5px solid;
+    padding: 0.4rem 1.2rem;
+    font-weight: 500;
+    letter-spacing: 0.05em;
+    /* text-transform: uppercase; */
+    transition: all 0.3s ease;
+
+    &:hover {
+      background-color: var(--foreground);
+      color: var(--background);
+    }
+  }
+
+  .button-work {
+    border-radius: 6px;
+    border: 0.5px solid;
+    padding: 0.4rem 1.2rem;
+    font-weight: 500;
+    letter-spacing: 0.05em;
+    /* text-transform: uppercase; */
+    transition: all 0.3s ease;
+    background-color: var(--slate);
+    color: var(--creme);
+
+    &:hover {
+      background-color: var(--creme);
+      color: var(--slate);
+    }
+
+  }
 }
