Revert "add neuro design system css and OAuth"
This reverts commit e9e3c21ebe24d64de995ed3fe8b22bf3f64a4624.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
 @import "tailwindcss";
-@import "./neumorphism.css";
 
 :root {
   --background: #f0eee6;
@@ -9,7 +8,7 @@
   --accent: #1C6AA6;
   --yellow: #c9a024;
   --orange: #E07A55;
-  --creme: #f0eee6;
+  --creme: #f9f6f2;
   --slate: #21201f;
 }
 
